# Nebula

./: .gitignore  KNOWN_LIMITATIONS.md  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
faas/: Cargo.toml  deny.toml  tachyon.wit
faas/adapters/nebula-redis-budget-store/: Cargo.toml
faas/adapters/nebula-redis-budget-store/src/: lib.rs
faas/nebula-crdt-merger/: Cargo.toml
faas/nebula-crdt-merger/src/: lib.rs
faas/nebula-curriculum-generator/: Cargo.toml
faas/nebula-curriculum-generator/src/: lib.rs
faas/nebula-data-anonymizer/: Cargo.toml
faas/nebula-data-anonymizer/src/: lib.rs
faas/nebula-dataset-forge/: Cargo.toml
faas/nebula-dataset-forge/src/: lib.rs
faas/nebula-deployment-policy/: Cargo.toml
faas/nebula-deployment-policy/src/: lib.rs
faas/nebula-divergence-aggregator/: Cargo.toml
faas/nebula-divergence-aggregator/src/: lib.rs
faas/nebula-doc-parser/: Cargo.toml
faas/nebula-doc-parser/src/: lib.rs
faas/nebula-dpo-judge/: Cargo.toml
faas/nebula-dpo-judge/src/: lib.rs
faas/nebula-drift-monitor/: Cargo.toml
faas/nebula-drift-monitor/src/: lib.rs
faas/nebula-economic-governor/: Cargo.toml
faas/nebula-economic-governor/src/: lib.rs
faas/nebula-economic-governor/tests/: e2e_finops_pipeline.rs
faas/nebula-eval-ast/: Cargo.toml  build.rs
faas/nebula-eval-ast/src/: lib.rs  main.rs
faas/nebula-eval-semantic/: Cargo.toml
faas/nebula-eval-semantic/src/: lib.rs
faas/nebula-golden-dataset-manager/: Cargo.toml
faas/nebula-golden-dataset-manager/src/: lib.rs
faas/nebula-lora-validator/: Cargo.toml
faas/nebula-lora-validator/src/: lib.rs
faas/nebula-p2p-sync-agent/: Cargo.toml
faas/nebula-p2p-sync-agent/src/: lib.rs
faas/nebula-quantization-engine/: Cargo.toml
faas/nebula-quantization-engine/src/: lib.rs
faas/nebula-semantic-chunker/: Cargo.toml
faas/nebula-semantic-chunker/src/: lib.rs
faas/nebula-semantic-deduplicator/: Cargo.toml
faas/nebula-semantic-deduplicator/src/: lib.rs
faas/nebula-teacher-arbitrator/: Cargo.toml
faas/nebula-teacher-arbitrator/src/: lib.rs
faas/nebula-telemetry-gateway/: Cargo.toml
faas/nebula-telemetry-gateway/src/: lib.rs
faas/nebula-tenant-core/: Cargo.toml
faas/nebula-tenant-core/src/: lib.rs
faas/nebula-tenant-router/: Cargo.toml
faas/nebula-tenant-router/src/: lib.rs
faas/nebula-tenant-router/tests/: e2e_pipeline_test.rs
faas/nebula-tool-architect/: Cargo.toml
faas/nebula-tool-architect/src/: lib.rs
faas/nebula-tool-gap-analyzer/: Cargo.toml
faas/nebula-tool-gap-analyzer/src/: lib.rs
faas/nebula-training-orchestrator/: Cargo.toml
faas/nebula-training-orchestrator/src/: lib.rs
faas/nebula-wasm-foundry/: Cargo.toml
faas/nebula-wasm-foundry/scripts/: build-rootfs.sh
faas/nebula-wasm-foundry/src/: lib.rs
openspec/specs/audit-cleanups/: spec.md
openspec/specs/automated-retraining/: spec.md
openspec/specs/canary-telemetry-provider/: spec.md
openspec/specs/ci-and-linting/: spec.md
openspec/specs/ci-hardening/: spec.md
openspec/specs/ci-traceability/: spec.md
openspec/specs/ci-workflows/: spec.md
openspec/specs/cli-engine/: spec.md
openspec/specs/cli-security-and-testing/: spec.md
openspec/specs/concrete-adapters/: spec.md
openspec/specs/constitutional-judge/: spec.md
openspec/specs/crdt-dataset-merger/: spec.md
openspec/specs/curriculum-generator/: spec.md
openspec/specs/data-anonymizer/: spec.md
openspec/specs/dataset-forge/: spec.md
openspec/specs/dataset-tool-injection/: spec.md
openspec/specs/deployment-artifacts/: spec.md
openspec/specs/divergence-aggregator/: spec.md
openspec/specs/doc-parser/: spec.md
openspec/specs/doc-parser-ssrf-protection/: spec.md
openspec/specs/dpo-judge-hardening/: spec.md
openspec/specs/dpo-training-engine/: spec.md
openspec/specs/drift-monitor/: spec.md
openspec/specs/economic-governor/: spec.md
openspec/specs/eval-ast/: spec.md
openspec/specs/eval-semantic/: spec.md
openspec/specs/finops-atomicity/: spec.md
openspec/specs/golden-dataset-manager/: spec.md
openspec/specs/ipc-bridge/: spec.md
openspec/specs/known-limitations/: spec.md
openspec/specs/logic-and-security/: spec.md
openspec/specs/lora-validator/: spec.md
openspec/specs/microvm-eval-ast/: spec.md
openspec/specs/oci-manifest-builder/: spec.md
openspec/specs/p2p-sync-agent/: spec.md
openspec/specs/preference-dataset/: spec.md
openspec/specs/protobuf-contract/: spec.md
openspec/specs/quantization-engine/: spec.md
openspec/specs/redis-integration-tests/: spec.md
openspec/specs/security-and-types/: spec.md
openspec/specs/security-gatekeeper/: spec.md
openspec/specs/semantic-chunker/: spec.md
openspec/specs/semantic-deduplicator/: spec.md
openspec/specs/storage-isolation/: spec.md
openspec/specs/synthesis-robustness/: spec.md
openspec/specs/tachyon-config-yaml/: spec.md
openspec/specs/tachyon-deployment-template/: spec.md
openspec/specs/teacher-arbitrator/: spec.md
openspec/specs/telemetry-gateway/: spec.md
openspec/specs/tenant-aware-training/: spec.md
openspec/specs/tenant-core/: spec.md
openspec/specs/tenant-router/: spec.md
openspec/specs/tool-architect/: spec.md
openspec/specs/training-orchestrator/: spec.md
openspec/specs/type-enforcement/: spec.md
openspec/specs/vscode-alignment-ui/: spec.md
openspec/specs/vscode-dashboard/: spec.md
openspec/specs/vscode-deployment-ui/: spec.md
openspec/specs/vscode-extension/: spec.md
openspec/specs/vscode-federation-ui/: spec.md
openspec/specs/vscode-finops-ui/: spec.md
openspec/specs/vscode-foundry-ui/: spec.md
openspec/specs/vscode-golden-ui/: spec.md
openspec/specs/vscode-multi-tenant-ui/: spec.md
openspec/specs/vscode-privacy-ui/: spec.md
openspec/specs/vscode-security-and-types/: spec.md
openspec/specs/vscode-tunnel-ui/: spec.md
openspec/specs/vscode-vram-ui/: spec.md
openspec/specs/wasm-foundry/: spec.md
proto/: ast_evaluator.proto
scripts/: build-eval-ast-rootfs.sh  publish-faas-oci.sh  verify_openspec.sh
wit/: config-ai.wit
(+138 files in other folders)
