[workspace]
members = [
  "nebula-telemetry-gateway",
  "nebula-eval-ast",
  "nebula-eval-semantic",
  "nebula-divergence-aggregator",
  "nebula-curriculum-generator",
  "nebula-teacher-arbitrator",
  "nebula-dataset-forge",
  "nebula-training-orchestrator",
  "nebula-doc-parser",
  "nebula-semantic-chunker",
  "nebula-lora-validator",
  "nebula-p2p-sync-agent",
  "nebula-crdt-merger",
  "nebula-quantization-engine",
  "nebula-drift-monitor",
  "nebula-deployment-policy",
  "nebula-data-anonymizer",
  "nebula-dpo-judge",
  "nebula-tenant-router",
  "nebula-golden-dataset-manager",
  "nebula-tool-architect",
  "nebula-tool-gap-analyzer",
  "nebula-wasm-foundry",
  "nebula-tenant-core",
  "nebula-semantic-deduplicator",
  "nebula-economic-governor",
  "adapters/nebula-redis-budget-store"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
sha2 = "0.10"
uuid = { version = "1.8", features = ["serde", "v5"] }
ts-rs = "10.0"
tiktoken-rs = "0.11"
redis = { version = "0.27", features = ["tokio-comp"] }
prost = "0.13"
tokio = { version = "1.41", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
tree-sitter = "0.22"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
