[package]
name = "nebula-dpo-judge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
sha2.workspace = true
nebula-tenant-core = { path = "../nebula-tenant-core" }

[lints]
workspace = true
