[package]
name = "nebula-economic-governor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
nebula-tenant-core = { path = "../nebula-tenant-core" }
tiktoken-rs.workspace = true

[dev-dependencies]
nebula-semantic-deduplicator = { path = "../nebula-semantic-deduplicator" }
nebula-teacher-arbitrator = { path = "../nebula-teacher-arbitrator" }
nebula-dataset-forge = { path = "../nebula-dataset-forge" }

[lints]
workspace = true
