[package]
name = "nebula-eval-ast"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tree-sitter.workspace = true

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

[lints]
workspace = true
